Fixed left menu z-index

--- a/css/phytoplankton/main.css
+++ b/css/phytoplankton/main.css
@@ -701,7 +701,7 @@ img {
   overflow-y: auto;
   position: fixed;
   top: 8%;
-  z-index: 1;
+  z-index: 2;
   width: 25%; }
   @media (max-width: 700px) {
     .phytoplankton-menu {
