--- a/scss/phytoplankton/_phytoplankton-styles.scss
+++ b/scss/phytoplankton/_phytoplankton-styles.scss
@@ -88,7 +88,7 @@
 	position: fixed;
 	top: 8%;
 	// right: 25%;
-	z-index: 1;
+	z-index: 2;
 	// margin: 0 auto;
 	// width: 40em;
 	width: 25%;
